# ed25519-onchain-sign-verify

./: .gitignore  Anchor.toml  package-lock.json  package.json
helpers/: signMessageStellar.js
keys/: deployer.json  invoker.json  program.json
programs/ed25519_poc/: Cargo.toml
programs/ed25519_poc/src/: lib.rs
tests/: ed25519_poc.ts
